PVQ-4179 Fixed checking MCIDs in nested tags and tags with variable content marks