@@ -35,15 +35,44 @@ else
 fi
 
 info "Test #02: Run validate MCID"
-OUTPUT=$(java -jar target/net.pdfix.validate-pdf-*.jar duplicate-mcid -i resources/test.pdf)
-COUNT=$(echo "$OUTPUT" | grep -c "Duplicate MCID Found")
-info "$OUTPUT"
-if [ "$COUNT" -eq 5 ]; then
-    success "passed"
-else
-    error "Validate MCID failed on resources/test.pdf. Expected 5 duplicate MCIDs, found $COUNT."
-    EXIT_STATUS=1
-fi
+
+function validateFile {
+    FILE=$1
+    COUNT=$2
+    # EXIT_STATUS=0
+
+    # Run Java program and capture outputs
+    stdout=$(mktemp)   # temporary file for stdout
+    stderr=$(mktemp)   # temporary file for stderr    
+
+    # Run the program, redirecting streams
+    java --enable-native-access=ALL-UNNAMED -jar target/net.pdfix.validate-pdf-*.jar duplicate-mcid -i "$FILE" >"$stdout" 2>"$stderr"
+    exit_code=$?
+
+    err=$(cat "$stderr")
+    out=$(cat "$stdout")
+    # echo "err: $err"
+    # echo "out: $out"
+
+    if [ "$exit_code" -gt 100 ]; then
+        error "Validate MCID failed with exception $exit_code."
+        EXIT_STATUS=1
+    else
+        if [ "$COUNT" -eq $exit_code ]; then
+            success "passed: $FILE"
+        else
+            error "Validate MCID failed on $FILE. Expected $COUNT duplicate MCIDs, found $exit_code."
+            EXIT_STATUS=1
+        fi
+    fi
+
+    # Clean up temporary files
+    rm "$stdout" "$stderr"
+    return $EXIT_STATUS
+}
+
+validateFile "resources/test.pdf" 1
+validateFile "resources/test1.pdf" 40
 
 popd > /dev/null
 
